<resources>
    <string name="app_name">CloudMusic</string>
    <string name="buttontext">注册</string>
    <string name="buttontext2">手机号登陆</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="others">其他方式登陆</string>
    <string name="activity">手机号登陆</string>
    <string name="hint">请输入手机号</string>
    <string name="hint2">请输入密码</string>
</resources>
