<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText"
    android:background="@color/colorAccent">


    <ImageView
        android:id="@+id/home_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_main"
        android:src="@drawable/bg_main"
        tools:ignore="ContentDescription,RtlCompat"
        android:layout_alignParentLeft="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="76dp"
        android:layout_height="82dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:src="@drawable/ic_icon"
        app:layout_anchor="@+id/home_page"
        app:layout_anchorGravity="center"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/Button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/bt_shape"
        android:shape="rectangle"
        android:text="@string/buttontext2"
        android:textColor="#FF0000"
        android:textSize="18sp"
        app:layout_anchor="@+id/home_page"
        tools:ignore="HardcodedText,RtlCompat"
        tools:text="@string/activity" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_below="@+id/home_page"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bt_shape"
        android:shape="rectangle"
        android:text="@string/buttontext"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        tools:text="@string/buttontext" />

    <ImageView
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginBottom="38dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_qq" />

    <ImageView
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginBottom="38dp"
        android:src="@drawable/ic_wx"
        android:contentDescription="@string/todo2" />

    <ImageView
        android:layout_width="43dp"
        android:layout_height="43dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:layout_marginBottom="38dp"
        android:src="@drawable/ic_wb"
        android:contentDescription="@string/todo3" />

    <ImageView
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="38dp"
        android:src="@drawable/ic_wy"
        android:contentDescription="@string/todo4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="106dp"
        android:text="@string/others"
        android:textAllCaps="true" />
</RelativeLayout>


