<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

<android.support.v7.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:id="@+id/toolbar"
    android:background="@color/colorPrimaryDark"
    app:title="@string/activity"
    app:titleTextColor="@color/colorAccent"


    >

</android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/button"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="295dp"
        android:background="@drawable/bt_shape2"
        android:shape="rectangle"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        tools:text="登陆" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:hint="@string/hint"
        android:maxLines="1"
        android:inputType=""
        tools:ignore="Autofill"
        android:drawableLeft="@drawable/ic_phone"
        android:drawableStart="@drawable/ic_phone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="147dp"
        android:hint="@string/hint2"
        android:maxLines="1"
        android:textColor="@android:color/background_dark"
        tools:ignore="Autofill,TextFields"
        android:drawableLeft="@drawable/ic_lock"
        android:drawableStart="@drawable/ic_lock" />

</RelativeLayout>




